@@ -4,6 +4,9 @@
 	* src/lib/chess/pgn.py: Handle unknown tokens (Bug #526252)
 	* src/lib/main.py: Correctly catch and display PGN errors
 	* src/lib/gtkui/gtkui.py, src/lib/display.py: Show dialog if unable to claim draw (Bug #515542)
+	* src/lib/chess/board.py:
+	  src/lib/game.py: Added detection for draw due to insufficient material (Bug #485250)
+	* src/lib/game.py: Fix regression in loaded games not displaying result
 
 2008-04-13  Robert Ancell  <robert.ancell@gmail.com>
 
